src/App.css
:root {
  /* Solarized Colors */
  --base03:    #002b36;
  --base02:    #073642;
  --base01:    #586e75;
  --base00:    #657b83;
  --base0:     #839496;
  --base1:     #93a1a1;
  --base2:     #eee8d5;
  --base3:     #fdf6e3;
  --yellow:    #b58900;
  --orange:    #cb4b16;
  --red:       #dc322f;
  --magenta:   #d33682;
  --violet:    #6c71c4;
  --blue:      #268bd2;
  --cyan:      #2aa198;
  --green:     #859900;
  /* END Solarized Colors*/
}

html {
  --background-main-color: var(--base3);
  --background-inverted-color: var(--base03);
  --font-main-color: var(--base00);
  --font-heading-color: var(--base01);
  --font-table-highlight-color: var(--base0);
  --table-highlight-color: var(--base03);
  --table-padding-size: 5px;


  background-color: var(--base3);
  color: var(--base00);
  text-align: center;
  color-scheme: light dark
}

body {
  margin: 2em 2em 5em 2em;
}

h1,h2,h3,h4,h5,h6 {
  color: var(--font-heading-color);
  border-color: var(--font-main-color);
}

a, a:active, a:visited {
  color: var(--blue);
  text-decoration: none;
}

a:hover {
  color: var(--magenta);
  text-decoration: underline;
}

form {
  display: flex;
  flex-direction: column;
  width: 550px;
  margin: 1em auto;
}

form * {
  padding: 0.25em;
  margin-left: 0.5em;
}

form input[type="text"] {
  width: 150px;
}

input::placeholder {
  text-align: center;
}

form > input[type="submit"] {
  width: 200px;
  margin: 0 auto;
}

.results table {
  margin: 0 auto;
  border-collapse: collapse;
}

thead {
  position: sticky;
  top: 0;
  background: var(--blue);
  color: var(--base3);
  outline: inset 1px var(--blue);
}

th {
  padding: var(--table-padding-size);
  height: 1.3em;
}

td {
  max-width: 500px;
  text-align: left;
  padding: var(--table-padding-size);
  margin: 0;
  outline: solid 1px var(--font-table-highlight-color);
}

tbody tr:nth-child(odd) {
  background-color: var(--table-highlight-color);
}

tbody tr:nth-child(odd) td {
  color: var(--font-table-highlight-color);
  outline: solid 1px var(--font-table-highlight-color);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background-main-color: var(--base03);
    --background-inverted-color: var(--base3);
    --font-main-color: var(--base0);
    --font-heading-color: var(--base1);
    --font-table-highlight-color: var(--base00);
    --table-highlight-color: var(--base3);
  }
  
  html {
    background-color: var(--background-main-color);
    color: var(--font-main-color);
    text-align: center;
  }

  td {
    border-color: var(--table-highlight-color);
  }

  tbody tr:nth-child(odd) {
    border-color: var(--background-main-color);
    outline-color: var(--background-main-color);
  }

  tbody tr:nth-child(odd) td {
    color: var(--font-table-highlight-color);
  }
}

